# gameathon-model

./: .gitignore  JUDGE_BRIEFING.md  MANUAL.md  README.md  build_exe_v2.js  project_summary.md  project_summary.txt  render.yaml
.cargo/: config.toml
.github/workflows/: build-apk.yml  build-desktop.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: attacker.html  attacker.js  chatbot.js  defense.html  demo.html  game.js  index.html  ironwall-gamethon.apk  launcher.html  lobby.html  package.json  style.css  unified.html
public_site/: index.html
